fixed last line of breakdown table spacing;

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,7 +23,6 @@ body {
 
   }
   table tr:last-of-type td{
-    padding: 5px 8px;
     line-height: 20px;
     border-bottom: none;
   }
